--- a/index.html
+++ b/index.html
@@ -5,34 +5,61 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,500' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-content">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>  
+      </button>  
+      <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
     </div>
-    <ul class="nav navbar-nav navbar-right">
-      <li class="active"><a href="#">home<span>•</span></a></li>
-      <li><a href="#">about<span>•</span></a></li>
-      <li><a href="#">tech<span>•</span></a></li> 
-      <li><a href="#">ecosystem<span>•</span></a></li> 
-      <li><a href="#">flexible workspace<span>•</span></a></li> 
-      <li><a href="#">smart buildings<span>•</span></a></li> 
-      <li><a href="#">resources<span>•</span></a></li> 
-      <li><a href="#">blog<span>•</span></a></li> 
-      <li><a href="#">contact<span>•</span></a></li> 
-      <li><a href="#">jeff login<span>•</span></a></li> 
-      <li><a href="#">demo<span>•</span></a></li> 
-    </ul>
+    <div class="navbar-collapse collapse navbar-right" id="navbar-content">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#" data-toggle="collapse" data-target=".navbar-collapse" >about<span>•</span></a></li>
+        <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse" >tech<span>•</span></a></li> 
+        <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse" >ecosystem<span>•</span></a></li> 
+        <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse" >flexible workspace<span>•</span></a></li> 
+        <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse" >smart buildings<span>•</span></a></li> 
+        <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse" >resources<span>•</span></a></li> 
+        <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse" >blog<span>•</span></a></li> 
+        <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse" >contact<span>•</span></a></li> 
+        <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse" >login<span>•</span></a></li> 
+        <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse" >demo</a></li> 
+      </ul>
+    </div>
   </div>
 </nav>
-<div class="test container-fluid">
-  <h1>My First Bootstrap Page</h1>
-  <p>This is some text.</p> 
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
+      <h2>TEST</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class=" text-section-top col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
+      <p> <strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </strong></p>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
+      <img src="img/writing.jpg" alt="man-writting-notes" class="img-responsive">
+    </div>
+  </div>
+  <div class="row">
+    <div class="text-section-bottom col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
+      <p> <strong>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</strong></p>
+      <p> <strong>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</strong></p>
+      <h3>Call data table</h3>
+    </div>
+  </div>
 </div>
 
 </body>
