--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@ $( document ).ready(function() {
             {"data": "telephone_number"},
             {"data": "call_date"},
             {"data": "call_time"},
-            {"data": "duration"},
+            {"data": "dur"},
             {"data": "uk_national"},
             {"data": "time_band"}
+
+
         ]
     });   
 });
