--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ $( document ).ready(function() {
             {"data": "call_date"},
             {"data": "call_time"},
             {"data": "dur"},
-            {"data": "uk_national"},
+            {"data": "UK National"},
             {"data": "time_band"}
 
 
