CLI's and phone numbers corrected

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ $( document ).ready(function() {
             {"data": "telephone_number"},
             {"data": "call_date"},
             {"data": "call_time"},
-            {"data": "dur"},
+            {"data": "Duration"},
             {"data": "UK National"},
             {"data": "time_band"}
 
