--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <button type="button" class="btn btn-default">Hide/Show table</button>
     </div>
     <div class="row">
-      <div id="table-row" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
+      <div class="table-row col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
         <table id="essensysTable" class="table table-bordered table-responsive">
           <thead>
             <tr>
@@ -110,7 +110,7 @@ $( document ).ready(function() {
     });
 
     $( "button" ).click(function() {
-  $( "#table-row" ).toggle( "slow" );
+  $( ".table-row" ).slideToggle( "slow" );
 });   
 });
 </script>
